correcting errors