@@ -5,7 +5,6 @@ import ru.otus.jdbc.exception.NoSuitableConstructorException;
 
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
@@ -25,36 +24,30 @@ public class EntityClassMetaDataImpl<T> implements EntityClassMetaData<T> {
     @Override
     public Constructor<T> getConstructor() {
         try {
-            // Find a suitable constructor with arguments (all class fields)
-            return clazz.getConstructor(Arrays.stream(clazz.getDeclaredFields())
-                    .map(Field::getType)
-                    .toArray(Class<?>[]::new));
+            // Ищем конструктор с аннотацией @Id или дефолтный
+            return clazz.getDeclaredConstructor();
         } catch (NoSuchMethodException e) {
-            throw new NoSuitableConstructorException("No suitable constructor found in class: " + clazz.getName(), e);
+            throw new NoSuitableConstructorException("Default constructor not found for class: " + clazz.getName(), e);
         }
     }
 
     @Override
     public Field getIdField() {
         return Arrays.stream(clazz.getDeclaredFields())
-                .filter(field -> field.isAnnotationPresent(Id.class))
+                .filter(field -> field.isAnnotationPresent(Id.class)) // Ищем поле с аннотацией @Id
                 .findFirst()
                 .orElseThrow(() -> new RuntimeException("No @Id field found in class: " + clazz.getName()));
     }
 
     @Override
     public List<Field> getAllFields() {
-        return List.of(clazz.getDeclaredFields());
+        return Arrays.asList(clazz.getDeclaredFields());
     }
 
     @Override
     public List<Field> getFieldsWithoutId() {
-        List<Field> fieldsWithoutId = new ArrayList<>();
-        for (Field field : clazz.getDeclaredFields()) {
-            if (!field.isAnnotationPresent(Id.class)) {
-                fieldsWithoutId.add(field);
-            }
-        }
-        return fieldsWithoutId;
+        return Arrays.stream(clazz.getDeclaredFields())
+                .filter(field -> !field.isAnnotationPresent(Id.class)) // Ищем все поля, кроме ID
+                .toList();
     }
 }
